--- a/Example_Quiz/2-Trivia.yaml
+++ b/Example_Quiz/2-Trivia.yaml
@@ -8,7 +8,7 @@ questions:
     answer: Elton John
 
   - type: audio
-    audio: ../Example_Quiz/media/trivia1.ogg
+    audio: media/trivia1.ogg
     audio_type: audio/ogg
     title: Music
     caption: Who composed this song?
