--- a/Example_Quiz/config.yaml
+++ b/Example_Quiz/config.yaml
@@ -1,5 +1,6 @@
 title: Example Pup Quiz
 display_question_numbers: false
+revealjs_path: reveal.js/
 custom_css: |
   .reveal ol { list-style-type: upper-alpha; }
   .answer { color: red }
