Update pub-quiz-generator to 0.0.4 and add question number style

--- a/Example_Quiz/config.yaml
+++ b/Example_Quiz/config.yaml
@@ -10,3 +10,12 @@ custom_css: |
   .source::before {
       content: "Source: ";
   }
+  #question_number {
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      font-family: var(--r-main-font);
+      font-size: var( --r-heading3-size);
+      font-weight: normal;
+      color: var(--r-main-color);
+  }
