--- a/.github/workflows/build-quiz.yml
+++ b/.github/workflows/build-quiz.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
@@ -30,6 +32,25 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: output/
+
+      - name: Check if release tag
+        id: check-tag
+        run: |
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+           echo "release=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create release artifacts
+        if: steps.check-tag.outputs.release == 'true'
+        run: |
+          mkdir release
+          npm pack --pack-destination release
+
+      - name: Release
+        if: steps.check-tag.outputs.release == 'true'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: release/*
 
   deploy:
     needs: build
