--- a/.github/workflows/build-quiz.yml
+++ b/.github/workflows/build-quiz.yml
@@ -28,7 +28,9 @@ jobs:
         run: node node_modules/pub-quiz-generator/index.js --version
 
       - name: Build quiz
-        run: npm run build
+        run: |
+          npm run build
+          chmod -R 755 output
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v1
