--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Example project for pub-quiz-generator",
   "main": "index.js",
   "files": [
-    "Example_Quiz",
+    "quiz",
     "package.json",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
     "clean": "rimraf ./output github-pages",
-    "build-quiz": "node node_modules/pub-quiz-generator/index.js -d ./Example_Quiz -o ./output",
-    "copy-media": "cp -r ./Example_Quiz/media ./output",
+    "build-quiz": "node node_modules/pub-quiz-generator/index.js -d ./quiz -o ./output",
+    "copy-media": "cp -r ./quiz/media ./output",
     "copy-revealjs": "mkdirp ./output/reveal.js/ && cp -r ./node_modules/reveal.js/dist ./output/reveal.js/dist && cp -r ./node_modules/reveal.js/plugin ./output/reveal.js/",
     "test": "npm run build-quiz",
     "build": "npm run clean && npm run build-quiz && npm run copy-media && npm run copy-revealjs"
