Update pub-quiz-generator to 0.0.10, showcase worksheet and multiple title pages

--- a/quiz/2-Trivia.yaml
+++ b/quiz/2-Trivia.yaml
@@ -1,5 +1,7 @@
-title_page:
-  title: Trivia
+title_pages:
+  - title: Trivia questions...
+
+  - caption: ... showcasing different question types
 
 questions:
   - type: text
