--- a/quiz/config.yaml
+++ b/quiz/config.yaml
@@ -1,4 +1,5 @@
 title: Example Pup Quiz
+worksheet_title: "Example Pup Quiz | Team:"
 display_question_numbers: false
 revealjs_path: reveal.js/
 revealjs_theme: dracula
