Fix permissions, update deploy-pages

--- a/.github/workflows/build-quiz.yml
+++ b/.github/workflows/build-quiz.yml
@@ -63,10 +63,11 @@ jobs:
     permissions:
       pages: write
       id-token: write
+      actions: read
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
